--- a/sec-edgar-proj/task2.ipynb
+++ b/sec-edgar-proj/task2.ipynb
@@ -82,7 +82,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "openai.api_key = 'sk-proj-ezLlyKQDuzqv3pzID4b9T3BlbkFJBBeNtH6x2TNCRkJqYoUS'"
+    "openai.api_key = API_KEY_HERE"
    ]
   },
   {
